# CANN-8.1.RC1

./: .gitignore  Ascend_8.1.RC1_tree_L1.txt  Ascend_8.1.RC1_tree_L2.txt  Ascend_8.1.RC1_tree_L3.txt  Ascend_8.1.RC1_tree_L4.txt  Ascend_8.1.RC1_tree_L5.txt  README.md  tree_build-in.txt  tree_driver.txt  tree_nnal.txt
Ascend/ascend-toolkit/: set_env.sh
Ascend/ascend-toolkit/8.1.RC1/: cann_uninstall.sh  create_version_softlink.sh
Ascend/ascend-toolkit/8.1.RC1/aarch64-linux/: ascend_toolkit_install.info  install.conf
Ascend/ascend-toolkit/8.1.RC1/aarch64-linux/tikcpp/ascendc_kernel_cmake/host_project/: CMakeLists.txt
Ascend/ascend-toolkit/8.1.RC1/combo_script/: uninstall.sh
Ascend/ascend-toolkit/8.1.RC1/compiler/: ascend_install.info  version.info
Ascend/ascend-toolkit/8.1.RC1/hccl/: ascend_install.info  version.info
Ascend/ascend-toolkit/8.1.RC1/mindstudio-toolkit/: ascend_install.info  version.info  version_name.info
Ascend/ascend-toolkit/8.1.RC1/opp/: ascend_install.info  version.info
Ascend/ascend-toolkit/8.1.RC1/opp_kernel/: ascend_install.info  scene.info  version.info
Ascend/ascend-toolkit/8.1.RC1/pyACL/: ascend-pyACL_install.info  scene.info
Ascend/ascend-toolkit/8.1.RC1/runtime/: ascend_install.info  version.info
Ascend/ascend-toolkit/8.1.RC1/toolkit/: ascend_install.info  version.info
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/framework/onnx_plugin/: CMakeLists.txt  adaptive_max_pool2d_plugin.cc
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/: CMakeLists.txt
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/common/: screen_printer.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/common/ge_common/: ge_types.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/common/ge_common/debug/: ge_log.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/common/optimizer/: graph_optimizer.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/common/plugin/: plugin_manager.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/exe_graph/lowering/: bg_ir_attrs.h  buffer_pool.h  dev_mem_value_holder.h  exe_res_generation_ctx_builder.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/exe_graph/runtime/: symbolic_shape.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/: ascend_limits.h  compiler_options.h  compute_graph.h  def_types.h  ge_global_options.h  graph_util.h  op_kernel_bin.h  op_types.h  shape_refiner.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/ascend_ir/: ascir_register.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/ascend_ir/ascend_ir_core/: ascend_ir.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/cache_policy/: match_policy.h  match_policy_exact_only.h  policy_register.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/detail/: attributes_holder.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/parallelism/: tensor_parallel_attrs.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/graph/utils/: math_util.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/register/: host_cpu_context.h  infer_axis_slice_registry.h  kernel_registry_impl.h  op_check_register.h  op_impl_kernel_registry.h  op_impl_registry_holder_manager.h  op_lib_register_impl.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/register/graph_optimizer/buffer_fusion/: buffer_fusion_pattern.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/register/graph_optimizer/fusion_common/: op_slice_info.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/register/graph_optimizer/graph_fusion/: graph_pass.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Onnx/metadef/inc/register/scope/: scope_pass_impl.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Tensorflow/op_proto/common/op_common/: CMakeLists.txt
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Tensorflow/op_proto/common/op_common/proto/: broadcast_infer.cc
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/AICPU/Tensorflow/op_proto/common/op_common/util/: op_log.h  op_util.h
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/custom_operator_sample/DSL/Tensorflow/testcases/ut/ops_test/reduce_all/: CMakeLists.txt  test_reduce_all_impl.py
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/operator_demo_projects/tbe_operator_sample/testcases/: CMakeLists.txt
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/operator_demo_projects/tbe_operator_sample/testcases/ut/ops_test/: CMakeLists.txt
Ascend/ascend-toolkit/8.1.RC1/tools/msopgen/template/operator_demo_projects/tbe_operator_sample/testcases/ut/ops_test/add/: CMakeLists.txt  test_add_impl.py  test_add_proto.cpp
Ascend/ascend-toolkit/8.1.RC1/var/: ascend_package_db.info
Ascend/ascend-toolkit/latest/: platform.ini  remove_latest_softlink.sh  version.cfg
Ascend/ascend-toolkit/latest/var/: ascend_package_db.info  manager.info  manager.sh
Ascend/driver/include/: ascend_hal_error.h  dcmi_interface_api.h  dms_device_node_type.h  dsmi_common_interface.h
Ascend/nnal/atb/: set_env.sh
(+8185 files in other folders)
